assert-struct/tests/snapshots/field_operations__enum_with_deref_mismatch.snap
---
source: assert-struct/tests/field_operations.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/field_operations_errors/enum_with_deref_mismatch.rs:15:29
   |
15 |         *boxed_option: Some("goodbye"),  // Should be "hello", will fail
   |                             ^^^^^^^^^ got "hello"
